--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Covestor Javascript Test</title>
     <link rel="stylesheet" type="text/css" href="assets/css/covestor.css" media="screen" />
+    <script data-main="js/main" src="bower_components/requirejs/require.js"></script>
 </head>
 <body>
 
